FIX PROGRESS BAR PERCENTAGE BADGE ALIGNEMENT
Fix percentage text vertical alignment.

--- a/Blog/static/Blog/CSS/styles.css
+++ b/Blog/static/Blog/CSS/styles.css
@@ -824,7 +824,7 @@ svg.tea #steamR {
 	border-radius: 0.7em;
 	box-sizing: border-box;
 	background-color: #ccf9d8;
-	padding: 0.1em 0.4em 0.3em 0.5em;
+	padding: 0em 0.4em 0.4em 0.5em;
 	content: ""attr(data-progress)"";
 	transform: translateX(40%) scale(0);
 	font-family: 'Montserrat Alternates', sans-serif;
